Add title to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <HTML>
-<head>Principal </head>
+     
+<<title>INICIO :V</title></head>
 <link href="TERCEROC.css" rel="stylesheet">
 <body>
      <center>
