Fix title tag in index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
      
-<<title>INICIO :V</title></head>
+<title>INICIO :V</title>
 <link href="TERCEROC.css" rel="stylesheet">
 <body>
      <center>
