Add link to PRUEBA.html in index.html
Added a new card link to 'PRUEBA.html' in the navigation.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <div class="card"><a link href="Emoción.html" style="color: whitesmoke;">Sentir</a></div>
         <div class="card"><a link href="Admiración.html" style="color: whitesmoke;">Admiración</a></div>
         <div class="card"><a link href="Sorpresa.html" style="color: whitesmoke;">¿¿??</a></div> 
+          <div class="card"><a link href="PRUEBA.html" style="color: whitesmoke;">.....</a></div> 
     </center>
      <h1>¿A que se debe la creación de la pagina?
         <div class="in-flex"><img src="multimedia/TENNA B.gif" aling="left" width="250px" height="250px" > 
